--- a/Packlists/ImportView.xaml
+++ b/Packlists/ImportView.xaml
@@ -1,29 +1,32 @@
-﻿<Window x:Class="Packlists.ImportView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Packlists"
-        xmlns:dependencyProperties="clr-namespace:Packlists.DependencyProperties"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        xmlns:converters="clr-namespace:Packlists.Converters"
-        xmlns:command="http://www.galasoft.ch/mvvmlight"
-        mc:Ignorable="d"
-        xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
-        md:DialogServiceViews.IsRegistered="True"
-        Title="Imports" 
-        xmlns:properties="clr-namespace:Packlists.Properties"
-        WindowStartupLocation="Manual"
-        Left="{Binding Source={x:Static properties:Settings.Default}, Path=ImportLeft, Mode=TwoWay}"
-        Top="{Binding Source={x:Static properties:Settings.Default}, Path=ImportTop, Mode=TwoWay}"
-        Height="{Binding Source={x:Static properties:Settings.Default}, Path=ImportHeight, Mode=TwoWay}"
-        Width="{Binding Source={x:Static properties:Settings.Default}, Path=ImportWidth, Mode=TwoWay}"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        DataContext="{Binding Import, Source={StaticResource Locator}}">
+﻿<Window
+    x:Class="Packlists.ImportView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:command="http://www.galasoft.ch/mvvmlight"
+    xmlns:converters="clr-namespace:Packlists.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dependencyProperties="clr-namespace:Packlists.DependencyProperties"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:local="clr-namespace:Packlists"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
+    xmlns:properties="clr-namespace:Packlists.Properties"
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+    Title="Imports"
+    Width="{Binding Source={x:Static properties:Settings.Default}, Path=ImportWidth, Mode=TwoWay}"
+    Height="{Binding Source={x:Static properties:Settings.Default}, Path=ImportHeight, Mode=TwoWay}"
+    MinWidth="680"
+    MinHeight="500"
+    md:DialogServiceViews.IsRegistered="True"
+    DataContext="{Binding Import, Source={StaticResource Locator}}"
+    Left="{Binding Source={x:Static properties:Settings.Default}, Path=ImportLeft, Mode=TwoWay}"
+    Top="{Binding Source={x:Static properties:Settings.Default}, Path=ImportTop, Mode=TwoWay}"
+    WindowStartupLocation="Manual"
+    mc:Ignorable="d">
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Closed">
-            <command:EventToCommand Command="{Binding CloseCommand}"/>
+            <command:EventToCommand Command="{Binding CloseCommand}" />
         </i:EventTrigger>
     </i:Interaction.Triggers>
 
@@ -34,98 +37,102 @@
     </Window.Resources>
 
     <Grid>
-        <ScrollViewer HorizontalScrollBarVisibility="Auto"
-                      VerticalScrollBarVisibility="Auto">
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="130"/>
-                    <ColumnDefinition Width="110"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="220"/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="130" />
+                    <ColumnDefinition Width="110" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="220" />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition Height="250"/>
-                    <RowDefinition Height="45"/>
-                    <RowDefinition Height="55"/>
-                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="250" />
+                    <RowDefinition Height="45" />
+                    <RowDefinition Height="55" />
+                    <RowDefinition Height="55" />
                 </Grid.RowDefinitions>
 
-                <Menu Grid.Column="0"
-                      Grid.Row="0"
-                      Grid.ColumnSpan="5">
-                    <MenuItem Header="Items" Command="{Binding OpenItemsPanelCommand}"/>
-                    <MenuItem Header="Materials" Command="{Binding OpenMaterialsPanelCommand}"/>
+                <Menu
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="5">
+                    <MenuItem Command="{Binding OpenItemsPanelCommand}" Header="Items" />
+                    <MenuItem Command="{Binding OpenMaterialsPanelCommand}" Header="Materials" />
                 </Menu>
 
-                <DatePicker dependencyProperties:DatePickerCalendar.IsMonthYear="True"
-                            dependencyProperties:DatePickerDateFormat.DateFormat="yyyy-MM"
-                            Grid.Column="0"
-                            Grid.Row="1"
-                            Margin="5 5 5 0"
-                            SelectedDate="{Binding SelectedMonth}" Grid.ColumnSpan="2"/>
+                <DatePicker
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Margin="5,5,5,0"
+                    dependencyProperties:DatePickerCalendar.IsMonthYear="True"
+                    dependencyProperties:DatePickerDateFormat.DateFormat="yyyy-MM"
+                    SelectedDate="{Binding SelectedMonth}" />
 
-                <DataGrid Grid.Column="0"
-                          Grid.ColumnSpan="2"
-                          Grid.Row="2"
-                          Grid.RowSpan="2"
-                          ItemsSource="{Binding Imports}" 
-                          SelectedItem="{Binding SelectedImport}"
-                          AutoGenerateColumns="False"
-                          CanUserAddRows="False"
-                          Margin="5 5 0 5">
+                <DataGrid
+                    Grid.Row="2"
+                    Grid.RowSpan="2"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Margin="5,5,0,5"
+                    AutoGenerateColumns="False"
+                    CanUserAddRows="False"
+                    ItemsSource="{Binding Imports}"
+                    SelectedItem="{Binding SelectedImport}">
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Date" 
-                                            Binding="{Binding ImportDate, StringFormat=d, ConverterCulture=PL-pl}"/>
+                        <DataGridTextColumn Binding="{Binding ImportDate, StringFormat=d, ConverterCulture=PL-pl}" Header="Date" />
 
-                        <DataGridTextColumn Header="Sender"
-                                            Binding="{Binding Sender}"/>
+                        <DataGridTextColumn Binding="{Binding Sender}" Header="Sender" />
 
                     </DataGrid.Columns>
                 </DataGrid>
 
-                <StackPanel Grid.Column="0"
-                            Grid.ColumnSpan="2"
-                            Grid.Row="4"
-                            Margin="5" Grid.RowSpan="2">
-                    <TextBlock Text="Sender:"/>
-                    <xctk:AutoSelectTextBox Text="{Binding Sender}"
-                                            AutoSelectBehavior="OnFocus"/>
-                    <TextBlock Text="Date:"/>
+                <StackPanel
+                    Grid.Row="4"
+                    Grid.RowSpan="2"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Margin="5">
+                    <TextBlock Text="Sender:" />
+                    <xctk:AutoSelectTextBox AutoSelectBehavior="OnFocus" Text="{Binding Sender}" />
+                    <TextBlock Text="Date:" />
                     <DatePicker SelectedDate="{Binding SelectedDate}">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="KeyDown">
-                                <command:EventToCommand Command="{Binding ImportsEnterCommand}"
-                                                        PassEventArgsToCommand="True"
-                                                        EventArgsConverter="{StaticResource KeyEventArgsToKeyConverter}"/>
+                                <command:EventToCommand
+                                    Command="{Binding ImportsEnterCommand}"
+                                    EventArgsConverter="{StaticResource KeyEventArgsToKeyConverter}"
+                                    PassEventArgsToCommand="True" />
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </DatePicker>
-                    <Button Content="Add"
-                            Command="{Binding AddImportCommand}"/>
+                    <Button Command="{Binding AddImportCommand}" Content="Add" />
                 </StackPanel>
 
-                <GroupBox Grid.Column="2"
-                          Grid.ColumnSpan="2"
-                          Grid.Row="1"
-                          Grid.RowSpan="4" 
-                          Header="Materials">
+                <GroupBox
+                    Grid.Row="1"
+                    Grid.RowSpan="4"
+                    Grid.Column="2"
+                    Grid.ColumnSpan="2"
+                    Header="Materials">
 
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="300"/>
-                            <RowDefinition/>
+                            <RowDefinition Height="300" />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
 
-                        <ListView ItemsSource="{Binding SelectedImport.ImportedMaterials}"
-                                      Margin="5"
-                                      ScrollViewer.VerticalScrollBarVisibility="Auto"
-                                      ScrollViewer.CanContentScroll="False"
-                                      Grid.Row="0"
-                                  SelectedItem="{Binding SelectedMaterialAmount}">
+                        <ListView
+                            Grid.Row="0"
+                            Margin="5"
+                            ItemsSource="{Binding SelectedImport.ImportedMaterials}"
+                            ScrollViewer.CanContentScroll="False"
+                            ScrollViewer.VerticalScrollBarVisibility="Auto"
+                            SelectedItem="{Binding SelectedMaterialAmount}">
 
                             <ListView.InputBindings>
                                 <KeyBinding Key="Delete" Command="{Binding RemoveMaterialAmountCommand}" />
@@ -133,74 +140,84 @@
 
                             <ListView.View>
                                 <GridView>
-                                    <GridViewColumn Width="120"  Header="Material">
+                                    <GridViewColumn Width="120" Header="Material">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <TextBlock Text="{Binding Material}"/>
+                                                <TextBlock Text="{Binding Material}" />
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
-                                    <GridViewColumn Width="75" 
-                                                    DisplayMemberBinding="{Binding Amount, StringFormat={}{0:N2}}" 
-                                                    Header="Amount"/>
-                                    <GridViewColumn Width="Auto" 
-                                                    DisplayMemberBinding="{Binding Material.Unit}"
-                                                    Header="Unit"/>
+                                    <GridViewColumn
+                                        Width="75"
+                                        DisplayMemberBinding="{Binding Amount, StringFormat={}{0:N2}}"
+                                        Header="Amount" />
+                                    <GridViewColumn
+                                        Width="Auto"
+                                        DisplayMemberBinding="{Binding Material.Unit}"
+                                        Header="Unit" />
                                 </GridView>
                             </ListView.View>
 
                         </ListView>
 
-                        <StackPanel Orientation="Horizontal"
-                                    Grid.Row="1">
-                            <TextBlock Text="Material:" 
-                                       Margin="5 5"
-                                       VerticalAlignment="Center"/>
-                            <ComboBox ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.Materials}"
-                                      SelectedItem="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.SelectedMaterial}"
-                                      Margin="5"
-                                      MinWidth="120"
-                                      VerticalAlignment="Center"/>
-                            <TextBlock Text="Amount: "
-                                       Margin="5"
-                                       VerticalAlignment="Center"/>
-                            <TextBox Text="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.Quantity, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N2}}"
-                                     Margin="5"
-                                     VerticalAlignment="Center"
-                                     MinWidth="75"
-                                     MinHeight="25"
-                                     HorizontalAlignment="Center">
+                        <StackPanel Grid.Row="1" Orientation="Horizontal">
+                            <TextBlock
+                                Margin="5,5"
+                                VerticalAlignment="Center"
+                                Text="Material:" />
+                            <ComboBox
+                                MinWidth="120"
+                                Margin="5"
+                                VerticalAlignment="Center"
+                                IsEditable="True"
+                                ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.Materials}"
+                                SelectedItem="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.SelectedMaterial}" />
+                            <TextBlock
+                                Margin="5"
+                                VerticalAlignment="Center"
+                                Text="Amount: " />
+                            <TextBox
+                                MinWidth="75"
+                                MinHeight="25"
+                                Margin="5"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Text="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.Quantity, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N2}}">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="KeyDown">
-                                        <command:EventToCommand Command="{Binding ImportedMaterialEnterCommand}"
-                                                                PassEventArgsToCommand="True"
-                                                                EventArgsConverter="{StaticResource KeyEventArgsToKeyConverter}"/>
+                                        <command:EventToCommand
+                                            Command="{Binding ImportedMaterialEnterCommand}"
+                                            EventArgsConverter="{StaticResource KeyEventArgsToKeyConverter}"
+                                            PassEventArgsToCommand="True" />
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                             </TextBox>
-                            <TextBlock Text="{Binding SelectedMaterial.Unit}"
-                                       VerticalAlignment="Center"
-                                       Background="DarkGray"
-                                       MinHeight="25"
-                                       MinWidth="20"
-                                       Margin="-5 0 5 0"
-                                       Padding="5 0 5 0"
-                                       HorizontalAlignment="Center"/>
-                            <Button Content="Add"
-                                    Margin="5"
-                                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.AddImportedMaterialCommand}"
-                                    VerticalAlignment="Center"
-                                    Padding="5"/>
+                            <TextBlock
+                                MinWidth="20"
+                                MinHeight="25"
+                                Margin="-5,0,5,0"
+                                Padding="5,0,5,0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Background="DarkGray"
+                                Text="{Binding SelectedMaterial.Unit}" />
+                            <Button
+                                Margin="5"
+                                Padding="5"
+                                VerticalAlignment="Center"
+                                Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.AddImportedMaterialCommand}"
+                                Content="Add" />
                         </StackPanel>
                     </Grid>
 
                 </GroupBox>
-                
-                <Button Grid.Column="3"
-                        Grid.Row="5"
-                        Margin="5 5 5 5"
-                        Content="Print monthly import report"
-                        Command="{Binding PrintMonthlyReportCommand}"/>
+
+                <Button
+                    Grid.Row="5"
+                    Grid.Column="3"
+                    Margin="5,5,5,5"
+                    Command="{Binding PrintMonthlyReportCommand}"
+                    Content="Print monthly import report" />
 
             </Grid>
         </ScrollViewer>
